--- a/index.html
+++ b/index.html
@@ -84,9 +84,16 @@
 
 				<section>
 					<h3>Roto Relief</h3>
-					<p>1981<small>7</small></p>
+					<p>1981<small><a href="http://www.alchemists.com/visual_alchemy/rebecca_deem.html">7</a></small></p>
 					<img src="img/roto_relief.jpg">
 					<p><a href="http://web.archive.org/web/20070627021638/http://holonet.khm.de/picts/Deem_Rebecca/roto_relief.jpg">http://web.archive.org/web/20070627021638/http://holonet.khm.de/picts/Deem_Rebecca/roto_relief.jpg</a></p>
+				</section>
+
+				<section>
+					<h3>Earings</h3>
+					<p>Reflection Hologram, 1983</p>
+					<p>Was produced commercially for personal adornment<small><a href="http://webmuseum.mit.edu/detail.php?t=objects&type=browse&f=maker&s=Deem%2C+Rebecca&record=3">8</a></small>.</p>
+					<img src="img/MOH-1983_69_L.jpg">
 				</section>
 
 				<section>
@@ -105,7 +112,8 @@
 					<section>
 						<ol start="6">
 							<li><a href="http://adsabs.harvard.edu/abs/1992SPIE.1600..402B">http://adsabs.harvard.edu/abs/1992SPIE.1600..402B</a></li>
-							<li><a href="http://www.alchemists.com/visual_alchemy/rebecca_deem.html">http://www.alchemists.com/visual_alchemy/rebecca_deem.html</a></li>
+							<li><em>Rebecca Deem</em> - <a href="http://www.alchemists.com/visual_alchemy/rebecca_deem.html">http://www.alchemists.com/visual_alchemy/rebecca_deem.html</a></li>
+							<li>MIT Museum Collection - <a href="http://webmuseum.mit.edu/detail.php?t=objects&type=browse&f=maker&s=Deem%2C+Rebecca&record=3">http://webmuseum.mit.edu/detail.php?t=objects&type=browse&f=maker&s=Deem%2C+Rebecca&record=3</a></li>
 						</ol>
 					</section>
 				</section>
