Display artwork better

--- a/index.html
+++ b/index.html
@@ -83,17 +83,25 @@
 				</section>
 
 				<section>
-					<h3>Roto Relief</h3>
-					<p>1981<small><a href="http://www.alchemists.com/visual_alchemy/rebecca_deem.html">7</a></small></p>
-					<img src="img/roto_relief.jpg">
-					<p><a href="http://web.archive.org/web/20070627021638/http://holonet.khm.de/picts/Deem_Rebecca/roto_relief.jpg">http://web.archive.org/web/20070627021638/http://holonet.khm.de/picts/Deem_Rebecca/roto_relief.jpg</a></p>
+					<section>
+						<h3>Roto Relief</h3>
+						<p>1981<small><a href="http://www.alchemists.com/visual_alchemy/rebecca_deem.html">7</a></small></p>
+						<p><a href="http://web.archive.org/web/20070627021638/http://holonet.khm.de/picts/Deem_Rebecca/roto_relief.jpg">http://web.archive.org/web/20070627021638/http://holonet.khm.de/picts/Deem_Rebecca/roto_relief.jpg</a></p>
+					</section>
+					<section>
+						<img src="img/roto_relief.jpg">
+					</section>
 				</section>
 
 				<section>
-					<h3>Earings</h3>
-					<p>Reflection Hologram, 1983</p>
-					<p>Was produced commercially for personal adornment<small><a href="http://webmuseum.mit.edu/detail.php?t=objects&type=browse&f=maker&s=Deem%2C+Rebecca&record=3">8</a></small>.</p>
-					<img src="img/MOH-1983_69_L.jpg">
+					<section>
+						<h3>Earings</h3>
+						<p>Reflection Hologram, 1983</p>
+						<p>Was produced commercially for personal adornment<small><a href="http://webmuseum.mit.edu/detail.php?t=objects&type=browse&f=maker&s=Deem%2C+Rebecca&record=3">8</a></small>.</p>
+					</section>
+					<section>
+						<img src="img/MOH-1983_69_L.jpg">
+					</section>
 				</section>
 
 				<section>
