--- a/index.html
+++ b/index.html
@@ -105,6 +105,17 @@
 				</section>
 
 				<section>
+					<section>
+						<h3>Up Against It</h3>
+						<p>Transmission Hologram, 1997<small><a href="http://www.physics.ohio-state.edu/~kagan/holo_show99/cat_holo_24Oct.pdf">5</a></small></p>
+						<p><a href="http://web.archive.org/web/20070627021829/http://holonet.khm.de/picts/Deem_Rebecca/It%27s%20About%20Time.jpg">http://web.archive.org/web/20070627021829/http://holonet.khm.de/picts/Deem_Rebecca/It%27s%20About%20Time.jpg</a></p>
+					</section>
+					<section>
+						<img src="img/It%27s%20About%20Time.jpg">
+					</section>
+				</section>
+
+				<section>
 
 					<section>
 						<h2>References</h2>
