--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
 						<p>In 1988, Rebecca Deem was one of six holographers awarded this prize along with $10,000<small><a href="http://www.apepper.com/content/articles/wales.html">4</a></small>.</p>
 					</section>
 
+					<section>
+						<h3>Now</h3>
+						<p>Deem currently lives in Santa Fe with her husband and fellow holographer, Fred Unterseher.</p>
+					</section>
+
 				</section>
 
 				<section>
