--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						<p>Was produced commercially for personal adornment<small><a href="http://webmuseum.mit.edu/detail.php?t=objects&type=browse&f=maker&s=Deem%2C+Rebecca&record=3">8</a></small>.</p>
 					</section>
 					<section>
-						<img src="img/MOH-1983_69_L.jpg">
+						<img src="img/MOH-1983_69_L.JPG">
 					</section>
 				</section>
 
